--- a/benchmark/go-react-render/package.json
+++ b/benchmark/go-react-render/package.json
@@ -7,6 +7,7 @@
     "testbuild": "npm run build && npm test"
   },
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "chai": "^4.0.2",
     "mocha": "^3.4.2"
   },
