--- a/src/elo-service/package.json
+++ b/src/elo-service/package.json
@@ -12,11 +12,15 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^2.29.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
     "superagent": "^3.5.2",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
+  },
+  "dependencies": {
+    "marked": "^0.3.6"
   }
 }
