--- a/src/elo-service/package.json
+++ b/src/elo-service/package.json
@@ -11,11 +11,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "superagent": "^3.5.2",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
